# munra-cl

./: .gitignore  .sesskey  README.md  config.py  main.py  pyproject.toml
components/: footer.py  header.py  page_layout.py
models/: database.py  db.py
pages/: contacto.py  historia.py  home.py  invoca_una_idea.py  registros.py
services/: ai_service.py  db_service.py
tools/: config.py  prompts.py  rec_generator.py
